--- a/lindaStore/carrinho/templates/carrinho/detail.html
+++ b/lindaStore/carrinho/templates/carrinho/detail.html
@@ -49,6 +49,6 @@
     <p class="text-right">
         <a href="{% url "shop:product_list" %}" class="button
             light">Continuar as compras</a>
-        <a href="#" class="button">Checkout</a>
+        <a href="{% url 'orders:order_create' %}" class="button">Checkout</a>
     </p>
 {% endblock %}
