build(issue#25): Implementado webhooks para receber as notificações de pagamento.

--- a/lindaStore/payment/templates/payment/process.html
+++ b/lindaStore/payment/templates/payment/process.html
@@ -17,20 +17,20 @@
         </thead>
         <tbody>
             {% for item in order.items.all %}
-                <tr>
+                <tr class='row{% cycle "1" "2" %}'>
                     <td>
                         <img src="{% if item.product.image %} {{ item.product.image.url }}"
                         {% else %} {% static "img/no_image.png" %}{% endif %}">
                     </td>
                     <td>{{ item.product.name }}</td>
                     <td class='num'>${{ item.price }}</td>
-                    <td class='num'>${{ item.quatity }}</td>
+                    <td class='num'>{{ item.quatity }}</td>
                     <td class='num'>${{ item.get_cost }}</td>
                 </tr>
             {% endfor %}
             <tr class='total'>
                 <td colspan='4'>TOTAL</td>
-                <td calss='num'>${{ order.get_total_cost }}</td>
+                <td class='num'>${{ order.get_total_cost }}</td>
             </tr>
         </tbody>
     </table>
